商品編集機能を実装